--- a/datacatalog-dashboard-ui/pom.xml
+++ b/datacatalog-dashboard-ui/pom.xml
@@ -34,6 +34,11 @@
             <artifactId>jersey-multipart</artifactId>
             <version>1.9.1</version>
         </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.14</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>datacatalog-dashboard</finalName>
