--- a/datacatalog-dashboard/pom.xml
+++ b/datacatalog-dashboard/pom.xml
@@ -75,6 +75,18 @@
         </dependency>
         <dependency>
             <groupId>org.apache.axis2</groupId>
+            <artifactId>axis2-adb-codegen</artifactId>
+            <version>1.6.1</version>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.axis2</groupId>
+            <artifactId>axis2-codegen</artifactId>
+            <version>1.6.1</version>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.axis2</groupId>
             <artifactId>axis2-mtompolicy</artifactId>
             <version>1.6.1</version>
             <optional>true</optional>
@@ -195,10 +207,58 @@
             </exclusions>
         </dependency>
 
+        <dependency>
+            <groupId>xmlbeans</groupId>
+            <artifactId>xmlbeans</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
-
+            <!--<plugin>-->
+            <!--<groupId>org.apache.maven.plugins</groupId>-->
+            <!--<artifactId>maven-antrun-plugin</artifactId>-->
+            <!--<version>1.1</version>-->
+            <!--<executions>-->
+            <!--<execution>-->
+            <!--<id>source-code-generation</id>-->
+            <!--<phase>process-resources</phase>-->
+            <!--<goals>-->
+            <!--<goal>run</goal>-->
+            <!--</goals>-->
+            <!--<configuration>-->
+            <!--<tasks>-->
+            <!--<java classname="org.apache.axis2.wsdl.WSDL2Java" fork="true">-->
+            <!--<arg line="-uri src/main/resources/CatalogService.wsdl -u   -o target/generated-code  -p edu.indiana.d2i.datacatalog.xmccat-->
+            <!---ns2p http://www.cs.indiana.edu/dde/namespaces/2008/02/catalog=edu.indiana.d2i.datacatalog.xmccat,http://www.cs.indiana.edu/dde/namespaces/2008/02/catalog/types=edu.indiana.d2i.datacatalog.xmccat.types"/>-->
+            <!--<classpath refid="maven.compile.classpath"/>-->
+            <!--</java>-->
+            <!--</tasks>-->
+            <!--</configuration>-->
+            <!--</execution>-->
+            <!--</executions>-->
+            <!--</plugin>-->
+            <!--<plugin>-->
+            <!--<groupId>org.codehaus.mojo</groupId>-->
+            <!--<artifactId>build-helper-maven-plugin</artifactId>-->
+            <!--<executions>-->
+            <!--<execution>-->
+            <!--<id>add-source</id>-->
+            <!--<phase>generate-sources</phase>-->
+            <!--<goals>-->
+            <!--<goal>add-source</goal>-->
+            <!--</goals>-->
+            <!--<configuration>-->
+            <!--<sources>-->
+            <!--<source>-->
+            <!--target/generated-code/src-->
+            <!--</source>-->
+            <!--</sources>-->
+            <!--</configuration>-->
+            <!--</execution>-->
+            <!--</executions>-->
+            <!--</plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
