--- a/datacatalog-dashboard/pom.xml
+++ b/datacatalog-dashboard/pom.xml
@@ -39,10 +39,15 @@
             <artifactId>xmccat-types-metadata</artifactId>
             <version>1.2.6</version>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>lead</groupId>-->
+            <!--<artifactId>lead-xmccat-domain-metadata</artifactId>-->
+            <!--<version>1.2.1</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>lead</groupId>
-            <artifactId>lead-xmccat-domain-metadata</artifactId>
-            <version>1.2.1</version>
+            <artifactId>datacat-domain-metadata</artifactId>
+            <version>1.0.1</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
