Dashboard source code for v1.0. Needs lot of refactorings.

--- a/datacatalog-dashboard-ui/src/main/webapp/WEB-INF/conf/dashboard-conf.properties
+++ b/datacatalog-dashboard-ui/src/main/webapp/WEB-INF/conf/dashboard-conf.properties
@@ -2,7 +2,7 @@ xmccat.host=coffeetree.cs.indiana.edu
 xmccat.port=10081
 xmccat.dn=public
 xmccat.service.client.timeout=240000
-datacat.perf.log=/Users/milindapathirage/performance.log
+datacat.perf.log=/u/drlead/lead-prod-deployment/datacat/DataCrawler/logs/performance.log
 datacat.db.user=datacatuser
 datacat.db.pw=datacat2719pw
-datacat.db.url=jdbc:mysql://coffeetree.cs.indiana.edu:3306/datacat
+datacat.db.url=jdbc:mysql://coffeetree.cs.indiana.edu:3306/datacat?connectTimeout=300000
